Recommited 37763 after making the Backend's passes names shorter. Moved the Backend's passes and Backend's utils into separate folders and separate projects in the solution. These changes come as a preparation for making tests for each pass individually.
*CQ*: None

*Reviewer*: Marina

*Review Board*:
http://cvcc-ubu-01.iil.intel.com/cr/r/960/

*Testing*:
PreCommit: http://cvcc-fc14-01.iil.intel.com:8080/job/PCompiler_nmeraey/27/

*Performance*:
No impacts on performance.

--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -214,7 +214,21 @@ set_target_properties( bugpoint PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( OclCpuBackEnd PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend )
 set_target_properties( OclCpuDebugging PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend )
 set_target_properties( OclUtils PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend )
-#set_target_properties( AddImplicitArgs PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes)
+set_target_properties( AddImplicitArgs PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( BuiltInFuncImport PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( DebugInfoPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( InstToFuncCall PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( LocalBuffers PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( LocalBuffAnalysis PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( ModuleCleanup PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( PrepareKernelArgs PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( PreventDivCrashes PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( PrintIRPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( ProfilingInfoPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( RelaxedPass PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( ResolveWICall PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( ShiftZeroUpperBits PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
+set_target_properties( UndefExternalFuncs PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend/ocl_passes )
 set_target_properties( OclRecorder PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/ocl_backend )
 
 set_target_properties( check PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/Tests )
