--- a/opencl-intel/backend/tests/opencl/lit.cfg
+++ b/opencl-intel/backend/tests/opencl/lit.cfg
@@ -81,7 +81,8 @@ config.environment['LLVM_SRC_ROOT'] = getattr(config, 'llvm_src_root', '')
 # Propagate PYTHON_EXECUTABLE into the environment
 config.environment['PYTHON_EXECUTABLE'] = getattr(config, 'python_executable',
                                                   '')
-
+#propegate LD_LIBRARY_PATH
+config.environment['LD_LIBRARY_PATH'] = lit.params.get('install_path', None)
 ###
 
 import os
