--- a/opencl-intel/backend/ocl_cpu_backend/CMakeLists.txt
+++ b/opencl-intel/backend/ocl_cpu_backend/CMakeLists.txt
@@ -21,7 +21,9 @@ set(OCL_CPU_BACKEND_IMPORT_DIRS
   ${OCL_CPU_BACKEND_DIR}
   ${OCL_CPU_BACKEND_DIR}/../arch_headers
   ${OCL_CPU_BACKEND_DIR}/../vectorizer/VolcanoWrapper
-  ${OCL_CPU_BACKEND_DIR}/../ocl_mic_executor)
+  ${OCL_CPU_BACKEND_DIR}/../ocl_mic_executor
+  ${OCL_CPU_BACKEND_DIR}/../plugin_manager
+)
 set(OCL_CPU_BACKEND_EXPORT_DIR ${OCL_CPU_BACKEND_DIR}/export)
 # the following flag serves as a differentiator between OCL Back-End standalone build and its build within OCL SDK framework
 option(OCL_BACKEND_STAND_ALONE "CBackend Enabled" ON)
