--- a/opencl-intel/backend/validations/OCLBuilder/CMakeLists.txt
+++ b/opencl-intel/backend/validations/OCLBuilder/CMakeLists.txt
@@ -6,6 +6,8 @@ cmake_minimum_required(VERSION 2.8.4)
 
 include_directories(
   ${BACKEND_ROOT_DIR}/dynamic_lib
+  ${BACKEND_ROOT_DIR}/ocl_cpu_backend/export
+  ${BACKEND_ROOT_DIR}/plugin_manager
   ${BACKEND_ROOT_DIR}/../cl_api
   ${BACKEND_ROOT_DIR}/../fe_compilers/clang_compiler
 )
