Added dependency on libpthread which is a requirement of later releases of MPSS CR: Dima

--- a/opencl-intel/devices/mic_device/mic_native/CMakeLists.txt
+++ b/opencl-intel/devices/mic_device/mic_native/CMakeLists.txt
@@ -231,6 +231,7 @@ list( APPEND MIC_LINK_FLAGS
                 -lcoi_device
                 -l${BACKEND_LIB}
                 -l${TBB_LIBS_TO_LINK}
+                -lpthread
 
                 # add unused defined symbols to the dynamic symbol table - they will be used dynamically
                 -rdynamic
