Log message: <LOG_BODY> - 80-bit long double support for NEAT ALU <CODE_REVIEW> - http://cvcc-ubu-01.iil.intel.com/cr/r/850/ <PERF_IMPLICATIONS> - None. <TEST> - Pre-commit http://cvcc-fc14-01.iil.intel.com:8080/job/PCompiler_yveselov/, local unittest.

--- a/opencl-intel/backend/CMakeLists.txt
+++ b/opencl-intel/backend/CMakeLists.txt
@@ -154,6 +154,7 @@ set_target_properties( LLVMHello PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( LLVMInstCombine PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( LLVMInstrumentation PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( LLVMInterpreter PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
+set_target_properties( OCLInterpreter PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( LLVMipa PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( LLVMipo PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
 set_target_properties( LLVMJIT PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/llvm )
@@ -253,10 +254,15 @@ set_target_properties( check_vectorizer.deps PROPERTIES FOLDER ${BACKEND_FOLDER_
 set_target_properties( Comparator PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
 set_target_properties( DataGenerator PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
 set_target_properties( DataManager PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
+if(WIN32)
+set_target_properties( NEAT_wrapper PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
+set_target_properties( REFALU_wrapper PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
+else ()
 set_target_properties( NEAT PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
 set_target_properties( REFALU PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
-set_target_properties( OCLBuiltins PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
+endif()
 set_target_properties( PlugInNEAT PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
+set_target_properties( OCLBuiltins PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
 set_target_properties( SATest PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
 set_target_properties( LLVMInterpreterPluggable PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation )
 #set_target_properties( ValidationTests PROPERTIES FOLDER ${BACKEND_FOLDER_NAME}/validation/tests )
